nav menu updation

--- a/team.html
+++ b/team.html
@@ -53,72 +53,30 @@
             <nav class="main-nav__two stricky">
                 <div class="container">
                     <div class="main-nav__logo-box">
-                        <a href="index.html">
-                            <img src="assets/images/logo-dark.png" alt="">
+                        <a href="https://services.blockchain313.com">
+                            <img src="assets/images/logo-2-1.png" alt="">
                         </a>
                     </div><!-- /.main-nav__logo-box -->
                     <div class="main-nav__main-navigation">
                         <ul class=" main-nav__navigation-box">
-                            <li class="dropdown">
-                                <a href="index.html">Home</a>
-                                <ul>
-                                    <li><a href="index.html">Home 01</a></li>
-                                    <li><a href="index-2.html">Home 02</a></li>
-                                    <li><a href="index-3.html">Home 03</a></li>
-                                    <li><a href="index-4.html">Home 04</a></li>
-                                    <li><a href="index-5.html">Home 05</a></li>
-                                    <li class="dropdown"><a href="#">Header Styles</a>
-                                        <ul>
-                                            <li><a href="index.html">Header 01</a></li>
-                                            <li><a href="index-2.html">Header 02</a></li>
-                                            <li><a href="index-3.html">Header 03</a></li>
-                                            <li><a href="index-4.html">Header 04</a></li>
-                                            <li><a href="index-5.html">Header 05</a></li>
-                                        </ul><!-- /.sub-menu -->
-                                    </li>
-                                </ul><!-- /.sub-menu -->
+                            <li>
+                                <a href="https://services.blockchain313.com">Home</a>
                             </li>
                             <li>
                                 <a href="about.html">About</a>
                             </li>
-                            <li class="dropdown">
-                                <a href="services-1.html">Services</a>
-                                <ul>
-                                    <li><a href="services-1.html">Services 01</a></li>
-                                    <li><a href="services-2.html">Services 02</a></li>
-                                    <li><a href="services-details.html">Services Details</a></li>
-                                </ul><!-- /.sub-menu -->
-                            </li>
-                            <li class="dropdown">
-                                <a href="portfolio-standard.html">Work</a>
-                                <ul>
-                                    <li><a href="portfolio-standard.html">Portfolio Standard</a></li>
-                                    <li><a href="portfolio-full.html">Portfolio Full</a></li>
-                                    <li><a href="portfolio-masonary.html">Portfolio Masonary</a></li>
-                                    <li><a href="portfolio-details.html">Portfolio Details</a></li>
-                                </ul><!-- /.sub-menu -->
-                            </li>
-                            <li class="dropdown">
-                                <a href="#">Pages</a>
-                                <ul>
-                                    <li><a href="pricing.html">Pricing</a></li>
-                                    <li><a href="faq.html">FAQ</a></li>
-                                    <li><a href="testimonials.html">Testimonials</a></li>
-                                    <li><a href="team.html">Team</a></li>
-                                </ul><!-- /.sub-menu -->
-                            </li>
-
-
-                            <li class="dropdown">
-                                <a href="blog-standard.html">News</a>
-                                <ul>
-                                    <li><a href="blog-grid.html">News Page</a></li>
-                                    <li><a href="blog-standard.html">News List</a></li>
-                                    <li><a href="blog-details.html">News Details</a></li>
-                                </ul><!-- /.sub-menu -->
-                            </li>
                             <li>
-                                <a href="contact.html">Contact</a>
+                                <a href="services.html">Services</a>
+                            </li>
+                            <li><a href="team.html">Team</a></li>
+
+                            <li><a href="pricing.html">Pricing</a></li>
+
+                            <li><a href="faq.html">FAQ</a></li>
+
+
+                            <li>
+                                <a href="https://www.blockchain313.com/p/write-for-us.html">Write For US</a>
                             </li>
                         </ul>
                     </div><!-- /.main-nav__main-navigation -->
@@ -129,6 +87,8 @@
             </nav><!-- /.main-nav__one -->
 
         </header><!-- /.site-header-two -->
+
+        
         <section class="page-header" style="background-image: url(assets/images/backgrounds/page-header-bg-1-1.jpg);">
             <div class="container">
                 <h2>Exclusive Team</h2>
