client pics updated

--- a/about.html
+++ b/about.html
@@ -112,8 +112,7 @@
                                 <p>about us</p>
                                 <h3>Exclusive Agency To <br> Provide Soluation</h3>
                             </div><!-- /.block-title-two -->
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tem
-                                por incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo </p>
+                            <p>BlockChain Technology have very professional and expert team. Everyone is expert in their own field. </p>
                             <ul class="list-unstyled video-one__list">
                                 <li>
                                     <i class="far fa-check"></i>
