--- a/about.html
+++ b/about.html
@@ -112,27 +112,35 @@
                                 <p>about us</p>
                                 <h3>Exclusive Agency To <br> Provide Soluation</h3>
                             </div><!-- /.block-title-two -->
-                            <p>BlockChain Technology have very professional and expert team. Everyone is expert in their own field. </p>
+                            <p>BlockChain Technology Software house have very professional and expert team. Everyone is expert in their own field. Two year ago, when we started this Software house,we just have web development team. But Now we have :</p>
                             <ul class="list-unstyled video-one__list">
                                 <li>
                                     <i class="far fa-check"></i>
-                                    Smashing Book 6 Is Here New Frontiers In Web Design
+                                    GBOB Expert (Specialized in Guest Posting) <br>Backlink by Guest post to High DA, DR Website.
                                 </li>
                                 <li>
                                     <i class="far fa-check"></i>
-                                    Introduction To Animation And The iMessage App Store With Shruggie
+                                    SEO Expert (First Page Ranker) <br>Onpage Offpage SEO Setting Plus Search engine Optimized Coding.
                                 </li>
                                 <li>
                                     <i class="far fa-check"></i>
-                                    Get Your Mobile Site Ready For The 2018 Holiday ways goods
+                                    BlockChain Developer (Specialized in Smart contract) <br>Dapps using solidity, React, Redux.
                                 </li>
                                 <li>
                                     <i class="far fa-check"></i>
-                                    Making Distributed Product Teams Work More Efficiently other
+                                    Web Development using GIT <br>Your Site will have record of each and everything.
+                                </li>
+                                <li>
+                                    <i class="far fa-check"></i>
+                                    WordPress Developer (Hosting, Theme and Plugin Designing) <br>Any Niche like Blog, Portfolio, E-Commerce, Magzime etc.
+                                </li>
+                                <li>
+                                    <i class="far fa-check"></i>
+                                    Google Blogger Website <br>Blogspot Website with Personal Domain
                                 </li>
                             </ul><!-- /.list-unstyled video-one__list -->
 
-                            <a href="#" class="thm-btn">Read More <i class="fa fa-angle-double-right"></i></a>
+                            <a href="https://services.blockchain313.com/about.html" class="thm-btn">Read More <i class="fa fa-angle-double-right"></i></a>
                             <!-- /.thm-btn -->
                         </div><!-- /.service-two__block -->
                     </div><!-- /.col-lg-5 -->
@@ -149,7 +157,7 @@
                             <div class="funfact-one__icon">
                                 <i class="far fa-user-alt"></i>
                             </div><!-- /.funfact-one__icon -->
-                            <h3><span class="counter">2500</span><!-- /.counter -->+</h3>
+                            <h3><span class="counter">250</span><!-- /.counter -->+</h3>
                             <p>Project</p>
                         </div><!-- /.funfact-one__single -->
                     </div><!-- /.col-lg-3 col-md-6 -->
@@ -158,7 +166,7 @@
                             <div class="funfact-one__icon">
                                 <i class="far fa-heart"></i>
                             </div><!-- /.funfact-one__icon -->
-                            <h3><span class="counter">2960</span><!-- /.counter -->+</h3>
+                            <h3><span class="counter">290</span><!-- /.counter -->+</h3>
                             <p>Satisfied Clients</p>
                         </div><!-- /.funfact-one__single -->
                     </div><!-- /.col-lg-3 col-md-6 -->
@@ -167,7 +175,7 @@
                             <div class="funfact-one__icon">
                                 <i class="far fa-cloud-download"></i>
                             </div><!-- /.funfact-one__icon -->
-                            <h3><span class="counter">5620</span><!-- /.counter -->
+                            <h3><span class="counter">10</span><!-- /.counter -->
                             </h3>
                             <p>Win Awards</p>
                         </div><!-- /.funfact-one__single -->
@@ -177,7 +185,7 @@
                             <div class="funfact-one__icon">
                                 <i class="far fa-star"></i>
                             </div><!-- /.funfact-one__icon -->
-                            <h3><span class="counter">365</span><!-- /.counter -->+</h3>
+                            <h3><span class="counter">11</span><!-- /.counter -->+</h3>
                             <p>Team Member</p>
                         </div><!-- /.funfact-one__single -->
                     </div><!-- /.col-lg-3 col-md-6 -->
@@ -189,7 +197,7 @@
             <div class="container text-center">
                 <h3>Our Business Advisors <br>
                     Always Help You</h3>
-                <a href="#" class="thm-btn">Read More <i class="fa fa-angle-double-right"></i></a><!-- /.thm-btn -->
+                <a href="https://www.blockchain313.com/p/contact-us.html" class="thm-btn">Contact US <i class="fa fa-angle-double-right"></i></a><!-- /.thm-btn -->
             </div><!-- /.container -->
         </section><!-- /.cta-two -->
 
@@ -212,8 +220,8 @@
                                     <a href="#"><i class="fab fa-google-plus-g"></i></a>
                                     <a href="#"><i class="fab fa-behance"></i></a>
                                 </div><!-- /.team-one__social -->
-                                <h3>Ricardo Torres</h3>
-                                <p>Web designer</p>
+                                <h3>HaFiZ CH QaSiM (CEO)</h3>
+                                <p>BlockChain & Web designer</p>
                             </div><!-- /.team-one__content -->
                         </div><!-- /.team-one__single -->
                     </div><!-- /.col-lg-3 -->
@@ -229,8 +237,8 @@
                                     <a href="#"><i class="fab fa-google-plus-g"></i></a>
                                     <a href="#"><i class="fab fa-behance"></i></a>
                                 </div><!-- /.team-one__social -->
-                                <h3>Paul Sanchez</h3>
-                                <p>Web designer</p>
+                                <h3>Mrs Rizwan</h3>
+                                <p>SEO Expert</p>
                             </div><!-- /.team-one__content -->
                         </div><!-- /.team-one__single -->
                     </div><!-- /.col-lg-3 -->
@@ -246,7 +254,7 @@
                                     <a href="#"><i class="fab fa-google-plus-g"></i></a>
                                     <a href="#"><i class="fab fa-behance"></i></a>
                                 </div><!-- /.team-one__social -->
-                                <h3>Herbert Waters</h3>
+                                <h3>Muhammad Asif</h3>
                                 <p>Web designer</p>
                             </div><!-- /.team-one__content -->
                         </div><!-- /.team-one__single -->
@@ -263,8 +271,8 @@
                                     <a href="#"><i class="fab fa-google-plus-g"></i></a>
                                     <a href="#"><i class="fab fa-behance"></i></a>
                                 </div><!-- /.team-one__social -->
-                                <h3>Jeremy Harrington</h3>
-                                <p>Web designer</p>
+                                <h3>Muhammad Zia</h3>
+                                <p>Content Writer</p>
                             </div><!-- /.team-one__content -->
                         </div><!-- /.team-one__single -->
                     </div><!-- /.col-lg-3 -->
