Team page updation

--- a/about.html
+++ b/about.html
@@ -220,7 +220,7 @@
                                     <a href="#"><i class="fab fa-google-plus-g"></i></a>
                                     <a href="#"><i class="fab fa-behance"></i></a>
                                 </div><!-- /.team-one__social -->
-                                <h3>HaFiZ CH QaSiM (CEO)</h3>
+                                <h3>HaFiZ CH QaSiM (Founder & CEO)</h3>
                                 <p>BlockChain & Web designer</p>
                             </div><!-- /.team-one__content -->
                         </div><!-- /.team-one__single -->
@@ -237,7 +237,7 @@
                                     <a href="#"><i class="fab fa-google-plus-g"></i></a>
                                     <a href="#"><i class="fab fa-behance"></i></a>
                                 </div><!-- /.team-one__social -->
-                                <h3>Mrs Rizwan</h3>
+                                <h3>Mrs Rizwan (Co-Founder & Manager)</h3>
                                 <p>SEO Expert</p>
                             </div><!-- /.team-one__content -->
                         </div><!-- /.team-one__single -->
@@ -483,23 +483,21 @@
                         <div class="about-three__content">
                             <div class="block-title-two text-left">
                                 <p>What we do</p>
-                                <h3>Marketing Is Our <br> Professional Business </h3>
+                                <h3>Development And Guest Posting Is Our <br> Professional Business </h3>
                             </div><!-- /.block-title-two -->
-                            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium dolo
-                                remque laudantium totam rem aperiam eaque ipsa quae abillo inventore veritatis et quasi
-                                architecto beatae vitae dicta sunt explicabo. </p>
-                            <h4>Started With Us</h4>
-                            <p>Domnis iste natus error sit voluptatem accusantium mque laudantium totam see
-                                rem aperiam eaque ipsa quae abillo inventore veritatis et quasi</p>
+                            <p>Our team is very expert in developemnt. And also very professional in SEO specialized in Guest Post. </p>
+                            <h4>Start With Us</h4>
+                            <p>If you want to work with us then just simply contact us in any way.</p>
+                            <p><a href="mailto:qasim@blockchain313.com">admin@blockchain313.com</a> <br> <a href="tel:+923410592668">+92 341 0592668</a></p>
 
-                            <a href="#" class="thm-btn about-three__btn">Read More <i class="fa fa-angle-double-right"></i></a>
+                            <a href="https://www.blockchain313.com/p/contact-us.html" class="thm-btn about-three__btn">Contact US<i class="fa fa-angle-double-right"></i></a>
                             <!-- /.thm-btn about-three__btn -->
                         </div><!-- /.about-three__content -->
                     </div><!-- /.col-lg-6 -->
                     <div class="col-xl-6 d-flex justify-content-center">
                         <div class="video-one__box">
                             <img src="assets/images/resources/video-4-1.png" alt="">
-                            <a href="https://www.youtube.com/watch?v=Rw1JBhaoHBs" class="video-popup video-one__btn"><i class="fa fa-play"></i></a><!-- /.video-popup video-one__btn -->
+                            <a href="https://www.youtube.com/c/videofyzone" class="video-popup video-one__btn"><i class="fa fa-play"></i></a><!-- /.video-popup video-one__btn -->
                         </div><!-- /.video-one__box -->
                     </div><!-- /.col-lg-6 -->
 
