--- a/team.html
+++ b/team.html
@@ -111,7 +111,7 @@
                         <div class="col-md-6 d-flex">
                             <div class="my-auto">
                                 <div class="team-one__top-text">
-                                    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium dolore mque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis etes quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt Neque porro quisquam est </p>
+                                    
                                 </div><!-- /.team-one__top-text -->
                             </div><!-- /.my-auto -->
                         </div><!-- /.col-md-6 -->
@@ -130,8 +130,8 @@
                                     <a href="#"><i class="fab fa-google-plus-g"></i></a>
                                     <a href="#"><i class="fab fa-behance"></i></a>
                                 </div><!-- /.team-one__social -->
-                                <h3>Kate Sanders</h3>
-                                <p>Web designer</p>
+                                <h3>HaFiZ CH QaSiM (Founder & CEO)</h3>
+                                <p>BlockChain & Web designer</p>
                             </div><!-- /.team-one__content -->
                         </div><!-- /.team-one__single -->
                     </div><!-- /.col-lg-3 -->
@@ -147,8 +147,8 @@
                                     <a href="#"><i class="fab fa-google-plus-g"></i></a>
                                     <a href="#"><i class="fab fa-behance"></i></a>
                                 </div><!-- /.team-one__social -->
-                                <h3>Jeffrey Walsh</h3>
-                                <p>Web designer</p>
+                                <h3>Mrs Rizwan (Co-Founder & Manager)</h3>
+                                <p>SEO Expert</p>
                             </div><!-- /.team-one__content -->
                         </div><!-- /.team-one__single -->
                     </div><!-- /.col-lg-3 -->
@@ -164,7 +164,7 @@
                                     <a href="#"><i class="fab fa-google-plus-g"></i></a>
                                     <a href="#"><i class="fab fa-behance"></i></a>
                                 </div><!-- /.team-one__social -->
-                                <h3>Amy Carpenter</h3>
+                                <h3>Muhammad Asif</h3>
                                 <p>Web designer</p>
                             </div><!-- /.team-one__content -->
                         </div><!-- /.team-one__single -->
@@ -181,8 +181,8 @@
                                     <a href="#"><i class="fab fa-google-plus-g"></i></a>
                                     <a href="#"><i class="fab fa-behance"></i></a>
                                 </div><!-- /.team-one__social -->
-                                <h3>Allie Collins</h3>
-                                <p>Web designer</p>
+                                <h3>Muhammad Zia</h3>
+                                <p>Content Writer</p>
                             </div><!-- /.team-one__content -->
                         </div><!-- /.team-one__single -->
                     </div><!-- /.col-lg-3 -->
@@ -199,8 +199,8 @@
                                     <a href="#"><i class="fab fa-google-plus-g"></i></a>
                                     <a href="#"><i class="fab fa-behance"></i></a>
                                 </div><!-- /.team-one__social -->
-                                <h3>Eunice Sanders</h3>
-                                <p>Web designer</p>
+                                <h3>Raheela</h3>
+                                <p>Full Stack Developer</p>
                             </div><!-- /.team-one__content -->
                         </div><!-- /.team-one__single -->
                     </div><!-- /.col-lg-3 -->
@@ -216,48 +216,14 @@
                                     <a href="#"><i class="fab fa-google-plus-g"></i></a>
                                     <a href="#"><i class="fab fa-behance"></i></a>
                                 </div><!-- /.team-one__social -->
-                                <h3>Leroy Curtis</h3>
-                                <p>Web designer</p>
-                            </div><!-- /.team-one__content -->
-                        </div><!-- /.team-one__single -->
-                    </div><!-- /.col-lg-3 -->
-                    <div class="col-lg-3 col-md-6">
-                        <div class="team-one__single">
-                            <div class="team-one__image">
-                                <img src="assets/images/team/team-1-7.jpg" alt="">
-                            </div><!-- /.team-one__image -->
-                            <div class="team-one__content">
-                                <div class="team-one__social">
-                                    <a href="#"><i class="fab fa-facebook-f"></i></a>
-                                    <a href="#"><i class="fab fa-twitter"></i></a>
-                                    <a href="#"><i class="fab fa-google-plus-g"></i></a>
-                                    <a href="#"><i class="fab fa-behance"></i></a>
-                                </div><!-- /.team-one__social -->
-                                <h3>Jean Obrien</h3>
-                                <p>Web designer</p>
-                            </div><!-- /.team-one__content -->
-                        </div><!-- /.team-one__single -->
-                    </div><!-- /.col-lg-3 -->
-                    <div class="col-lg-3 col-md-6">
-                        <div class="team-one__single">
-                            <div class="team-one__image">
-                                <img src="assets/images/team/team-1-8.jpg" alt="">
-                            </div><!-- /.team-one__image -->
-                            <div class="team-one__content">
-                                <div class="team-one__social">
-                                    <a href="#"><i class="fab fa-facebook-f"></i></a>
-                                    <a href="#"><i class="fab fa-twitter"></i></a>
-                                    <a href="#"><i class="fab fa-google-plus-g"></i></a>
-                                    <a href="#"><i class="fab fa-behance"></i></a>
-                                </div><!-- /.team-one__social -->
-                                <h3>Josie Welch</h3>
-                                <p>Web designer</p>
+                                <h3>Afeefa</h3>
+                                <p>Affiliate Marketing Expert</p>
                             </div><!-- /.team-one__content -->
                         </div><!-- /.team-one__single -->
                     </div><!-- /.col-lg-3 -->
                 </div><!-- /.row -->
                 <div class="text-center">
-                    <a href="#" class="thm-btn team-one__more-btn">View More <i class="fa fa-angle-double-right"></i></a><!-- /.thm-btn team-one__more-btn -->
+                    <a href="https://services.blockchain313.com/about.html" class="thm-btn team-one__more-btn">View More <i class="fa fa-angle-double-right"></i></a><!-- /.thm-btn team-one__more-btn -->
                 </div><!-- /.text-center -->
             </div><!-- /.container -->
         </section><!-- /.team-one -->
@@ -268,9 +234,11 @@
             <img src="assets/images/shapes/cta-shape-2-3.png" class="cta-eleven__moc-3" alt="">
             <div class="container">
                 <h3>Work With Us</h3>
-                <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque lauda <br> ntium totam
-                    rem aperiam eaque ipsa quae ab illo inventore veritatis et </p>
-                <a href="#" class="thm-btn cta-eleven__btn">Read More <i class="fa fa-angle-double-right"></i></a>
+                <p>Our team is very expert in developemnt. And also very professional in SEO (Specialized in Guest Post).<br>
+                    <b>Start With Us</b><br>
+                    If you want to work with us then just simply contact us in any way.</p>
+                    <p><a href="mailto:qasim@blockchain313.com">admin@blockchain313.com</a> <br> <a href="tel:+923410592668">+92 341 0592668</a></p>
+                <a href="https://www.blockchain313.com/p/contact-us.html" class="thm-btn cta-eleven__btn">Contact US <i class="fa fa-angle-double-right"></i></a>
                 <!-- /.thm-btn cta-eleven__btn -->
             </div><!-- /.container -->
         </section><!-- /.cta-eleven -->
