--- a/team.html
+++ b/team.html
@@ -305,7 +305,7 @@
                                 <img src="assets/images/case/case-1-1.jpg" alt="">
                             </div><!-- /.case-one__image -->
                             <div class="case-one__content">
-                                <h3><a href="#">How To Improve <br> Business</a></h3>
+                                <h3><a href="https://www.shaheeninstitute.blogspot.com/">Shaheen Institute</a></h3>
                             </div><!-- /.case-one__content -->
                         </div><!-- /.case-one__single -->
                     </div><!-- /.col-lg-4 -->
@@ -315,7 +315,7 @@
                                 <img src="assets/images/case/case-1-2.jpg" alt="">
                             </div><!-- /.case-one__image -->
                             <div class="case-one__content">
-                                <h3><a href="#">How To Improve <br> Business</a></h3>
+                                <h3><a href="https://www.videofy.co.vu/">Videofy AutoMobile<br>Zone</a></h3>
                             </div><!-- /.case-one__content -->
                         </div><!-- /.case-one__single -->
                     </div><!-- /.col-lg-4 -->
@@ -325,7 +325,7 @@
                                 <img src="assets/images/case/case-1-3.jpg" alt="">
                             </div><!-- /.case-one__image -->
                             <div class="case-one__content">
-                                <h3><a href="#">How To Improve <br> Business</a></h3>
+                                <h3><a href="https://worldzonic.blogspot.com/">World Zone</a></h3>
                             </div><!-- /.case-one__content -->
                         </div><!-- /.case-one__single -->
                     </div><!-- /.col-lg-4 -->
