--- a/services.html
+++ b/services.html
@@ -107,28 +107,35 @@
                                 <p>Our Services</p>
                                 <h3>We Offer Exclusive <br> Service For You</h3>
                             </div><!-- /.block-title-two -->
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit sed eiumod temor incididunt ut labore et
-                                dolore magna aliqua. Ut enim ad veniam quis nostrud exercitation ullamco laboris nisi </p>
+                            <p>BlockChain Technology Software house have very professional and expert team. Everyone is expert in their own field. Two year ago, when we started this Software house,we just have web development team. But Now we have :</p>
                             <ul class="list-unstyled video-one__list">
                                 <li>
                                     <i class="far fa-check"></i>
-                                    Smashing Book 6 Is Here New Frontiers In Web Design
+                                    GBOB Expert (Specialized in Guest Posting) <br>Backlink by Guest post to High DA, DR Website.
                                 </li>
                                 <li>
                                     <i class="far fa-check"></i>
-                                    Introduction To Animation And The iMessage App Store With Shruggie
+                                    SEO Expert (First Page Ranker) <br>Onpage Offpage SEO Setting Plus Search engine Optimized Coding.
                                 </li>
                                 <li>
                                     <i class="far fa-check"></i>
-                                    Get Your Mobile Site Ready For The 2018 Holiday ways goods
+                                    BlockChain Developer (Specialized in Smart contract) <br>Dapps using solidity, React, Redux.
                                 </li>
                                 <li>
                                     <i class="far fa-check"></i>
-                                    Making Distributed Product Teams Work More Efficiently other
+                                    Web Development using GIT <br>Your Site will have record of each and everything.
+                                </li>
+                                <li>
+                                    <i class="far fa-check"></i>
+                                    WordPress Developer (Hosting, Theme and Plugin Designing) <br>Any Niche like Blog, Portfolio, E-Commerce, Magzime etc.
+                                </li>
+                                <li>
+                                    <i class="far fa-check"></i>
+                                    Google Blogger Website <br>Blogspot Website with Personal Domain
                                 </li>
                             </ul><!-- /.list-unstyled video-one__list -->
 
-                            <a href="#" class="thm-btn">View More <i class="fa fa-angle-double-right"></i></a>
+                            <a href="https://www.blockchain313.com/p/contact-us.html" class="thm-btn">Contact US <i class="fa fa-angle-double-right"></i></a>
                             <!-- /.thm-btn -->
                         </div><!-- /.service-two__block -->
                     </div><!-- /.col-lg-5 -->
@@ -148,9 +155,11 @@
             <img src="assets/images/shapes/cta-shape-2-3.png" class="cta-eleven__moc-3" alt="">
             <div class="container">
                 <h3>Work With Us</h3>
-                <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque lauda <br> ntium totam
-                    rem aperiam eaque ipsa quae ab illo inventore veritatis et </p>
-                <a href="#" class="thm-btn cta-eleven__btn">Read More <i class="fa fa-angle-double-right"></i></a>
+                <p>Our team is very expert in developemnt. And also very professional in SEO (Specialized in Guest Post).<br>
+                    <b>Start With Us</b><br>
+                    If you want to work with us then just simply contact us in any way.</p>
+                    <p><a href="mailto:qasim@blockchain313.com">admin@blockchain313.com</a> <br> <a href="tel:+923410592668">+92 341 0592668</a></p>
+                <a href="https://www.blockchain313.com/p/contact-us.html" class="thm-btn cta-eleven__btn">Contact US <i class="fa fa-angle-double-right"></i></a>
                 <!-- /.thm-btn cta-eleven__btn -->
             </div><!-- /.container -->
         </section><!-- /.cta-eleven -->
@@ -264,7 +273,7 @@
                                 <img src="assets/images/case/case-1-1.jpg" alt="">
                             </div><!-- /.case-one__image -->
                             <div class="case-one__content">
-                                <h3><a href="#">How To Improve <br> Business</a></h3>
+                                <h3><a href="https://www.shaheeninstitute.blogspot.com/">Shaheen Institute</a></h3>
                             </div><!-- /.case-one__content -->
                         </div><!-- /.case-one__single -->
                     </div><!-- /.col-lg-4 -->
@@ -274,7 +283,7 @@
                                 <img src="assets/images/case/case-1-2.jpg" alt="">
                             </div><!-- /.case-one__image -->
                             <div class="case-one__content">
-                                <h3><a href="#">How To Improve <br> Business</a></h3>
+                                <h3><a href="https://www.videofy.co.vu/">Videofy AutoMobile<br>Zone</a></h3>
                             </div><!-- /.case-one__content -->
                         </div><!-- /.case-one__single -->
                     </div><!-- /.col-lg-4 -->
@@ -284,7 +293,7 @@
                                 <img src="assets/images/case/case-1-3.jpg" alt="">
                             </div><!-- /.case-one__image -->
                             <div class="case-one__content">
-                                <h3><a href="#">How To Improve <br> Business</a></h3>
+                                <h3><a href="https://worldzonic.blogspot.com/">World Zone</a></h3>
                             </div><!-- /.case-one__content -->
                         </div><!-- /.case-one__single -->
                     </div><!-- /.col-lg-4 -->
